NOJIRA: Autowire refactor + litt småtteri (#1082)
* En gigantisk refaktor som tar vekk alle autowired fra konstruktører (som ikke trenger det)

* Fiksa imports

* Erstattet noen få collect(tolist) med toList

* Erstattet noen kommentarer med kode, og mange kommentarer som bare forteller hva koden gjør!